; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/mips/extr_mips.c_mips_sim_next_cycle.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/mips/extr_mips.c_mips_sim_next_cycle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mips_sim = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mips_sim*)* @mips_sim_next_cycle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mips_sim_next_cycle(%struct.mips_sim* %0) #0 {
  %2 = alloca %struct.mips_sim*, align 8
  store %struct.mips_sim* %0, %struct.mips_sim** %2, align 8
  %3 = load %struct.mips_sim*, %struct.mips_sim** %2, align 8
  %4 = getelementptr inbounds %struct.mips_sim, %struct.mips_sim* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* %4, align 4
  %7 = load %struct.mips_sim*, %struct.mips_sim** %2, align 8
  %8 = getelementptr inbounds %struct.mips_sim, %struct.mips_sim* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mips_sim*, %struct.mips_sim** %2, align 8
  %11 = getelementptr inbounds %struct.mips_sim, %struct.mips_sim* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 4
  %12 = load %struct.mips_sim*, %struct.mips_sim** %2, align 8
  %13 = getelementptr inbounds %struct.mips_sim, %struct.mips_sim* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @state_transition(i32 %14, i32 0)
  ret void
}

declare dso_local i32 @state_transition(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
